# cabalpackageresolver

./: .gitignore  Project.cabal  README.md  cabal  collect.py  input.txt  kb.txt  resolve.lp
app/: KnowledgeBase.hs  Main.hs  Parser.hs
testdata/: depsoftestinputs.txt  kb.txt  knowledge.txt  myCabalRules.txt  myDb.txt  testdeps.txt  testinputs.cabal  testinputs.txt
versions/: aeson.txt  base.txt  base16-bytestring.txt  bytestring.txt  conduit-extra.txt  conduit.txt  containers.txt  cryptohash-sha1.txt  deepseq.txt  directory.txt  exceptions.txt  extra.txt  file-embed.txt  filepath.txt  ghc.txt  hie-bios.txt  hslogger.txt  optparse-applicative.txt  process.txt  tagged.txt  tasty-expected-failure.txt  tasty-hunit.txt  tasty.txt  temporary.txt  text.txt  time.txt  transformers.txt  unix-compat.txt  unordered-containers.txt  vector.txt  yaml.txt
