cabal-version:      2.4
name:               cabal-test-stuff
version:            0.1.0.0
author:             Fendor
maintainer:         power.walross@gmail.com
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010
